# velero-ui

./: .gitignore  .tool-versions  Dockerfile  ReadMe.md  pyproject.toml  requirements.txt  run.py
chart/: .helmignore  Chart.yaml  values.yaml
chart/templates/: deployment.yaml  ingress.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
velero_ui/: __init__.py  backup.py  kube_api.py  restore.py  routes.py  schedule.py  storage.py  user.py  velero_api.py  velero_api_utils.py
velero_ui/static/css/: styles.css
velero_ui/static/javascript/: backup.js  dashboard.js  restore.js  schedule.js
velero_ui/templates/: backup.html  index.html  navbar.html  restore.html  schedule.html
